--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "fvi"
-version = "1.4.4"
+version = "2.0a1"
 description = "Open those files that contain a string in Vim"
 readme = "README.rst"
 keywords = ["grep", "vi", "vim", "gvim"]
